test/files/neg/macro-invalidsig-implicit-params.check
Impls_Macros_1.scala:5: error: macro implementations cannot have implicit parameters other than TypeTag evidences
  def foo_targs[T, U: c.TypeTag](c: Ctx)(implicit x: c.Expr[Int]) = {
                                                  ^
one error found
